# adi-imu-driver

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  VERSION  main.c
.github/workflows/: ci.yml
asyncio/: CMakeLists.txt  asyncio.cpp  asyncio.h
conda-recipe/adimu-feedstock/recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
examples/: flash_tmu.c  gpio_main.c  gpio_test.c  imu_buf_burst.c  imu_buf_burst_fileio.c  imu_buf_burst_fileio.cpp  imu_buf_burst_py.py  imu_buf_fast_main.cpp  imu_buf_main.c  imu_fast_main.cpp  imu_main.c  imu_test.c  spi_main.c  spi_test.c  uart_test.c
fileio/: CMakeLists.txt  fileio.cpp  fileio.h
hardware/: Jetson-Raspberry Pi Breakout RevA.brd  Jetson-Raspberry Pi Breakout RevA.sch
imu_spi_buffer/: CMakeLists.txt  imu_spi_buffer.c  imu_spi_buffer.h  imu_spi_buffer_regmap.h
include/: adi_imu_common.h  adi_imu_common.h.in  adi_imu_regmap.h  adis16495_regmap.h  imu_spi_buffer_regmap.h
lib/: CMakeLists.txt  adi_imu_driver.c  adi_imu_driver.h  adi_imu_regmap.h
lib/imu/: CMakeLists.txt  adi_imu_driver.c  adi_imu_driver.h  adi_imu_regmap.h
lib/imu_buf/: CMakeLists.txt  imu_spi_buffer.c  imu_spi_buffer.h  imu_spi_buffer_regmap.h
linux/: CMakeLists.txt  gpio.c  gpio.h  hw_main.c  spi_driver.c  spi_driver.h  uart_driver.c  uart_driver.h  utils.c  utils.h
osx/: CMakeLists.txt  spi_driver.c  spi_driver.h
src/: main.c
src/adi_imu_driver/: CMakeLists.txt  adi_imu_driver.c  adi_imu_driver.h  adi_imu_regmap.h
src/spi_linux/: CMakeLists.txt  spi_driver.c  spi_driver.h
src/util/: CMakeLists.txt  util.c  util.h
tests/: CMakeLists.txt  test_imu_16495.c  test_imu_buffer_data_seq.c  test_imu_buffer_data_seq_burst_mode.c
